--- a/src/app/core/components/sidebar/sidebar.component.html
+++ b/src/app/core/components/sidebar/sidebar.component.html
@@ -1,22 +1,13 @@
 <aside class="main-sidebar">
-  <section class="sidebar">
-    <div class="user-panel">
-      <div class="pull-left image">
-        <img src="https://via.placeholder.com/150" class="img-circle" alt="User Image">
-      </div>
-      <div class="pull-left info">
-        <p>Alexander Pierce</p>
-        <a href="#"><i class="fa fa-circle text-success"></i> Online</a>
-      </div>
-    </div>
-    <ul class="sidebar-menu" data-widget="tree">
-      <li class="header">MAIN NAVIGATION</li>
-      <li routerLinkActive="active">
-        <a [routerLink]="['home']">
-          <i class="fa fa-home"></i>
-          <span>Home</span>
-        </a>
-      </li>
-    </ul>
-  </section>
+    <section class="sidebar">
+        <ul class="sidebar-menu" data-widget="tree">
+            <li class="header">MENU</li>
+            <li routerLinkActive="active">
+                <a [routerLink]="['home']">
+                    <i class="fa fa-home"></i>
+                    <span>Home</span>
+                </a>
+            </li>
+        </ul>
+    </section>
 </aside>
