--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,12 @@
-<router-outlet></router-outlet>
+<div id="wrapper">
+    <app-header></app-header>
+    <app-sidebar></app-sidebar>
+    <div class="main">
+        <div class="main-content">
+            <div class="container-fluid">
+                <router-outlet></router-outlet>
+            </div>
+        </div>
+    </div>
+    <app-footer></app-footer>
+</div>
