--- a/src/app/core/components/footer/footer.component.html
+++ b/src/app/core/components/footer/footer.component.html
@@ -1,8 +1,10 @@
-<footer class="main-footer">
-    <div class="pull-right hidden-xs"><b>Version</b> 2.4.18</div>
-    <strong
-        >Copyright &copy; 2014-2019
-        <a href="https://adminlte.io">AdminLTE</a>.</strong
-    >
-    All rights reserved.
+<div class="clearfix"></div>
+<footer>
+    <div class="container-fluid">
+        <p class="copyright">
+            &copy; 2017
+            <a href="https://www.themeineed.com" target="_blank">Theme I Need</a
+            >. All Rights Reserved.
+        </p>
+    </div>
 </footer>
