--- a/src/app/core/components/sidebar/sidebar.component.html
+++ b/src/app/core/components/sidebar/sidebar.component.html
@@ -1,13 +1,34 @@
-<aside class="main-sidebar">
-    <section class="sidebar">
-        <ul class="sidebar-menu" data-widget="tree">
-            <li class="header">MENU</li>
-            <li routerLinkActive="active">
-                <a [routerLink]="['home']">
-                    <i class="fa fa-home"></i>
-                    <span>Home</span>
-                </a>
-            </li>
-        </ul>
-    </section>
-</aside>
+<div id="sidebar-nav" class="sidebar">
+    <div class="sidebar-scroll">
+        <nav>
+            <ul class="nav">
+                <li>
+                    <a href="index.html" class="active"
+                        ><i class="lnr lnr-home"></i> <span>Dashboard</span></a
+                    >
+                </li>
+                <li>
+                    <a href="#subPages" data-toggle="collapse" class="collapsed"
+                        ><i class="lnr lnr-file-empty"></i> <span>Pages</span>
+                        <i class="icon-submenu lnr lnr-chevron-left"></i
+                    ></a>
+                    <div id="subPages" class="collapse">
+                        <ul class="nav">
+                            <li>
+                                <a href="page-profile.html" class="">Profile</a>
+                            </li>
+                            <li>
+                                <a href="page-login.html" class="">Login</a>
+                            </li>
+                            <li>
+                                <a href="page-lockscreen.html" class=""
+                                    >Lockscreen</a
+                                >
+                            </li>
+                        </ul>
+                    </div>
+                </li>
+            </ul>
+        </nav>
+    </div>
+</div>
